--- a/FakeAtlas/App.xaml
+++ b/FakeAtlas/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:FakeAtlas"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Localization/lang.ru-RU.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
