--- a/FakeAtlas/MainWindow.xaml
+++ b/FakeAtlas/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FakeAtlas"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+        Title="{DynamicResource m_Title}" Height="553" Width="503">
+    <Grid HorizontalAlignment="Right" Width="auto">
+        <Frame Source="Views/AccountPage.xaml"></Frame>
     </Grid>
 </Window>
