--- a/FakeAtlas/Views/LoginWindow.xaml
+++ b/FakeAtlas/Views/LoginWindow.xaml
@@ -1,25 +1,18 @@
-﻿<mah:MetroWindow x:Class="FakeAtlas.Views.LoginWindow"
+﻿<Window x:Class="FakeAtlas.Views.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FakeAtlas.Views"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="488" Width="370"
-        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" 
-        xmlns:viewmodels="clr-namespace:FakeAtlas.ViewModels" 
-        d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}" WindowStartupLocation="CenterScreen">
+        Title="LoginWindow" Height="450" Width="800"
+        WindowStartupLocation="CenterScreen"
+        AllowsTransparency="True"
+        WindowStyle="None">
+    <WindowChrome.WindowChrome>
+        <WindowChrome ResizeBorderThickness="{Binding ResizeBorderThikness}"/>
+    </WindowChrome.WindowChrome>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <TextBox Grid.Row="2" Style="{StaticResource MahApps.Styles.TextBox}" 
-                 mah:ControlsHelper.FocusBorderBrush="Black"
-                 />
+        
     </Grid>
-</mah:MetroWindow>
+</Window>
