--- a/FakeAtlas/App.xaml
+++ b/FakeAtlas/App.xaml
@@ -8,13 +8,13 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Localization/lang.ru-RU.xaml" />
                 
-                <!--Order is importent-->
+                
                 <ResourceDictionary Source="Styles/Colors.xaml" />
                 <ResourceDictionary Source="Styles/Buttons.xaml" />
                 <ResourceDictionary Source="Styles/Texts.xaml" />
                 <ResourceDictionary Source="Styles/Windows.xaml" />
-                <!--............................................-->
-                
+                <ResourceDictionary Source="CustomUIElements/ButtonsTemplates.xaml"></ResourceDictionary>
+
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
