--- a/FakeAtlas/Styles/Buttons.xaml
+++ b/FakeAtlas/Styles/Buttons.xaml
@@ -1,5 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:FakeAtlas.Styles">
-    
+    <Style TargetType="{x:Type Button}" x:Key="InputButton">
+        <Setter Value="Template">
+            
+        </Setter>
+    </Style>
 </ResourceDictionary>
