--- a/FakeAtlas/Views/LoginWindow.xaml
+++ b/FakeAtlas/Views/LoginWindow.xaml
@@ -12,7 +12,7 @@
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
         WindowStyle="SingleBorderWindow"
-        x:Name="signUpPage">
+        x:Name="signUpPage" viewmodels:WindowCloser.EnableWindowClosingProperty="True">
     <WindowChrome.WindowChrome>
         <WindowChrome/>
 
@@ -36,9 +36,9 @@
                 <TextBlock Text="Fake Atlas" Foreground="#FF6397C5" FontFamily="Segoe Script" HorizontalAlignment="Center" FontSize="30" Grid.Row="0" Grid.Column="1" Width="168"/>
                 <StackPanel DockPanel.Dock="Top" Width="50" Height="20" Orientation="Horizontal" Grid.ColumnSpan="2" HorizontalAlignment="Right"
                             VerticalAlignment="Top" Grid.Column="1" Grid.Row="0">
-                    <Button Style="{DynamicResource MinimizeButton}" Command="{Binding MinimizeCommand}" VerticalAlignment="Bottom" WindowChrome.IsHitTestVisibleInChrome="True" Height="16" Width="15"/>
+                    <Button Style="{DynamicResource MinimizeButton}" Command="{x:Static SystemCommands.MinimizeWindowCommand}" VerticalAlignment="Bottom" WindowChrome.IsHitTestVisibleInChrome="True" Height="16" Width="15"/>
                     <Label Width="12"/>
-                    <Button Style="{DynamicResource CloseButton}" Command="{Binding CloseCommand}" VerticalAlignment="Bottom" WindowChrome.IsHitTestVisibleInChrome="True" Height="18" Width="17"/>
+                    <Button Style="{DynamicResource CloseButton}" Command="{x:Static SystemCommands.CloseWindowCommand}" VerticalAlignment="Bottom" WindowChrome.IsHitTestVisibleInChrome="True" Height="18" Width="17"/>
                 </StackPanel>
                 <TextBox Grid.Column="1" Grid.Row="1" Height="30" VerticalAlignment="Bottom" Style="{DynamicResource InputTextBox}" Text="{Binding SelectedAccount.UserLogin, UpdateSourceTrigger=PropertyChanged}"/>
                 <PasswordBox Grid.Row="3" Grid.Column="1"  Height="30" VerticalAlignment="Top" x:Name="tbPasswordBox" Style="{DynamicResource InputPasswordBox}"/>
