--- a/FakeAtlas/Views/MainWindow.xaml
+++ b/FakeAtlas/Views/MainWindow.xaml
@@ -9,7 +9,6 @@
         Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <WindowChrome.WindowChrome>
         <WindowChrome/>
-
     </WindowChrome.WindowChrome>
     <Border BorderBrush="Black" BorderThickness="1">
         <Border Background="#FF191E30" BorderBrush="#FF4F5A66" BorderThickness="1">
@@ -30,11 +29,8 @@
                 <TextBlock Text="Fake Atlas" Foreground="#FF6397C5" FontFamily="Segoe Script" HorizontalAlignment="Center" FontSize="30" Grid.Row="0" Grid.Column="1" Width="168"/>
                 <StackPanel DockPanel.Dock="Top" Width="122" Height="37" Orientation="Horizontal" HorizontalAlignment="Right"
                             VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="2"  Grid.Row="0">
-                    <Button Style="{DynamicResource MinimizeButton}" Command="{x:Static SystemCommands.MinimizeWindowCommand}" VerticalAlignment="Bottom" WindowChrome.IsHitTestVisibleInChrome="True" Height="25" Width="24"/>
-                    <Label Width="24"/>
-                    <Button Style="{DynamicResource MaximizeButton}" Command="{x:Static SystemCommands.MaximizeWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="20" Width="24"/>
-                    <Label Width="18"/>
-                    <Button Style="{DynamicResource CloseButton}" Command="{x:Static SystemCommands.CloseWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="36" Width="32"/>
+                    <Button Style="{DynamicResource MinimizeButton}" Command="{x:Static SystemCommands.MinimizeWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="16" Width="15"/>
+                    <Button Style="{DynamicResource CloseButton}" Command="{x:Static SystemCommands.CloseWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="18" Width="17"/>
                 </StackPanel>
             </Grid>
         </Border>
