--- a/FakeAtlas/Views/MainWindow.xaml
+++ b/FakeAtlas/Views/MainWindow.xaml
@@ -29,8 +29,9 @@
                 <TextBlock Text="Fake Atlas" Foreground="#FF6397C5" FontFamily="Segoe Script" HorizontalAlignment="Center" FontSize="30" Grid.Row="0" Grid.Column="1" Width="168"/>
                 <StackPanel DockPanel.Dock="Top" Width="122" Height="37" Orientation="Horizontal" HorizontalAlignment="Right"
                             VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="2"  Grid.Row="0">
-                    <Button Style="{DynamicResource MinimizeButton}" Command="{x:Static SystemCommands.MinimizeWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="16" Width="15"/>
-                    <Button Style="{DynamicResource CloseButton}" Command="{x:Static SystemCommands.CloseWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="18" Width="17"/>
+                    <Button Style="{DynamicResource MinimizeButton}" Command="{x:Static SystemCommands.MinimizeWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="15" Width="15" Margin="14"/>
+                    <Button Style="{DynamicResource MaximizeButton}" Command="{x:Static SystemCommands.MinimizeWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="13" Width="13" Margin="10"/>
+                    <Button Style="{DynamicResource CloseButton}" Command="{x:Static SystemCommands.CloseWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="18" Width="17" Margin="10"/>
                 </StackPanel>
             </Grid>
         </Border>
