--- a/FakeAtlas/App.xaml
+++ b/FakeAtlas/App.xaml
@@ -3,11 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vm="clr-namespace:FakeAtlas.ViewModels"
              xmlns:v="clr-namespace:FakeAtlas.Views"
-             StartupUri="Views/LoginWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
+
         <ResourceDictionary>
+            <DataTemplate DataType="{x:Type vm:SignInViewModel}">
+                <v:SignInPage/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type vm:SignUpViewModel}">
+                <v:SignUpPage/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type vm:BookingUserViewModel}">
+                <v:InfoPage/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type vm:OrdersViewModel}">
+                <v:OrdersPage/>
+            </DataTemplate>
 
             <ResourceDictionary.MergedDictionaries>
+                
                 <ResourceDictionary Source="Localization/lang.ru-RU.xaml" />
 
                 <ResourceDictionary Source="Styles/Colors.xaml" />
