--- a/FakeAtlas/Localization/lang.ru-RU.xaml
+++ b/FakeAtlas/Localization/lang.ru-RU.xaml
@@ -10,4 +10,10 @@
     <v:String x:Key="m_SignIn">Авторизоваться</v:String>
     <v:String x:Key="m_SignUp">Не зарегистрированы?</v:String>
     <v:String x:Key="m_SignUpPage">Зарегистрироваться</v:String>
+    <v:String x:Key="m_Find">Найти маршрут</v:String>
+    <v:String x:Key="m_Help">Помощь</v:String>
+    <v:String x:Key="m_History">Поездки</v:String>
+    <v:String x:Key="m_SignOut">Выйти</v:String>
+    <v:String x:Key="m_Info">Информация
+        о пользователе</v:String>
 </ResourceDictionary>
