--- a/FakeAtlas/Styles/Buttons.xaml
+++ b/FakeAtlas/Styles/Buttons.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:draw="clr-namespace:System.Drawing;assembly=System.Drawing">
     <Style TargetType="{x:Type Button}" x:Key="InputButton">
         <Setter Property="Background" Value="#FF5370C0" />
         <Setter Property="TextBlock.TextAlignment" Value="Center" />
@@ -61,8 +62,8 @@
         </Style.Triggers>
     </Style>
 
-    <Style TargetType="{x:Type Button}" x:Key="SignUpButton">
-        <Setter Property="FontStyle" Value="Italic"/>
+    <Style TargetType="{x:Type Button}" x:Key="LiteralButton">
+        <Setter Property="FontFamily" Value="NanumGothic"/>
         <Setter Property="Foreground" Value="#FF8FD1FF"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -82,6 +83,7 @@
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="Opacity" Value="0.75" />
             </Trigger>
+            
         </Style.Triggers>
     </Style>
 
@@ -167,20 +169,87 @@
         </Setter>
     </Style>
 
-    <!--<Viewbox Width="16" Height="16" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
-  <Rectangle Width="16" Height="16">
-    <Rectangle.Fill>
-      <DrawingBrush>
-        <DrawingBrush.Drawing>
-          <DrawingGroup>
-            <DrawingGroup.Children>
-              <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
-              <GeometryDrawing Brush="#FF212121" Geometry="F1M11.999,10.002L10.998,10.002 10.998,5.002 5.998,5.002 5.998,4.001 11.999,4.001z M10.002,11.999L4.001,11.999 4.001,5.998 10.002,5.998z M5.002,3L5.002,5.002 3,5.002 3,13 10.998,13 10.998,10.998 13,10.998 13,3z" />
-            </DrawingGroup.Children>
-          </DrawingGroup>
-        </DrawingBrush.Drawing>
-      </DrawingBrush>
-    </Rectangle.Fill>
-  </Rectangle>
-</Viewbox>-->
+
+    <Style TargetType="{x:Type Button}" x:Key="InformationSymbol">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Opacity" Value="0.75" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button" x:Name="ct">
+                    <Border x:Name="Bd" Height="{TemplateBinding Height}" Width="{TemplateBinding Width}"
+                BorderBrush="#00000000"
+                BorderThickness="1,1,1,1">
+                        <Viewbox Width="16" Height="16" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
+                            <Rectangle Width="16" Height="16">
+                                <Rectangle.Fill>
+                                    <DrawingBrush>
+                                        <DrawingBrush.Drawing>
+                                            <DrawingGroup>
+                                                <DrawingGroup.Children>
+                                                    <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                                    <GeometryDrawing Brush="#00000000" Geometry="F1M10,14L6,14 6,2 10,2z" />
+                                                    <GeometryDrawing Brush="#FFCDE6FF" Geometry="F1M9,3L7,3 7,5 9,5z M9,13L7,13 7,6 9,6z" />
+                                                </DrawingGroup.Children>
+                                            </DrawingGroup>
+                                        </DrawingBrush.Drawing>
+                                    </DrawingBrush>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                        </Viewbox>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Bd" Property="Background" Value="#FF838383"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="Opacity" Value="0.55" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type Button}" x:Key="RequestPlugin">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Opacity" Value="0.75" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button" x:Name="ct">
+                    <Border x:Name="Bd" Height="{TemplateBinding Height}" Width="{TemplateBinding Width}"
+                BorderBrush="#00000000"
+                BorderThickness="1,1,1,1">
+                        <Viewbox Width="16" Height="16" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
+                            <Rectangle Width="16" Height="16">
+                                <Rectangle.Fill>
+                                    <DrawingBrush>
+                                        <DrawingBrush.Drawing>
+                                            <DrawingGroup>
+                                                <DrawingGroup.Children>
+                                                    <GeometryDrawing Brush="#FF4F5A66" Geometry="F1M12.0605,2L5.9995,2 5.9995,0 1.9995,0 1.9995,2 -0.000500000000000611,2 -0.000500000000000611,6 1.9995,6 1.9995,8 3.9995,8 3.9995,14C3.9995,15.299,5.0305,16,5.9995,16L13.9995,16C15.2985,16,15.9995,14.97,15.9995,14L15.9995,5.556z" />
+                                                    <GeometryDrawing Brush="#FF191E30" Geometry="F1M11.6406,3L7.9996,3 7.9996,4 10.9996,4 10.9996,7 13.9996,7 13.9996,14 5.9996,14 5.9996,8 4.9996,8 4.9996,14C4.9996,15,5.9646,15,5.9646,15L13.9646,15C14.9646,15,14.9996,14,14.9996,14L14.9996,6z" />
+                                                    <GeometryDrawing Brush="#FFF0EFF1" Geometry="F1M11,7L11,4 8,4 8,6 6,6 6,8 6,14 14,14 14,7z" />
+                                                    <GeometryDrawing Brush="#FF92C9FF" Geometry="F1M5,7L5,5 7,5 7,3 5,3 5,1 3,1 3,3 1,3 1,5 3,5 3,7z" />
+                                                </DrawingGroup.Children>
+                                            </DrawingGroup>
+                                        </DrawingBrush.Drawing>
+                                    </DrawingBrush>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                        </Viewbox>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Bd" Property="Background" Value="#FF838383"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="Opacity" Value="0.55" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
