--- a/FakeAtlas/Styles/Colors.xaml
+++ b/FakeAtlas/Styles/Colors.xaml
@@ -13,7 +13,7 @@
     <Color x:Key="SelectedUnfocusedColor">#FFDDDDDD</Color>
 
     <Color x:Key="ControlLightColor">#FFBFCDFF</Color>
-    <Color x:Key="ControlMediumColor">#FF7381F9</Color>
+    <Color x:Key="ControlMediumColor">#3E4962</Color>
     <Color x:Key="ControlDarkColor">#FF211AA9</Color>
 
     <Color x:Key="ControlMouseOverColor">#FF3843C4</Color>
@@ -70,3 +70,5 @@
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
 </ResourceDictionary>
+    
+    
