--- a/FakeAtlas/App.xaml
+++ b/FakeAtlas/App.xaml
@@ -23,11 +23,20 @@
                 <v:OrdersPage/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type vm:SearchViewModel}">
+                <v:SearchView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type vm:HelpViewModel}">
+                <v:HelpPage/>
+            </DataTemplate>
+            
             <ResourceDictionary.MergedDictionaries>
                 
                 <ResourceDictionary Source="Localization/lang.ru-RU.xaml" />
 
                 <ResourceDictionary Source="Styles/Colors.xaml" />
+                
                 <ResourceDictionary Source="Styles/Textboxes.xaml" />
                 <ResourceDictionary Source="Styles/Buttons.xaml" />
                 <ResourceDictionary Source="Styles/Texts.xaml" />
