--- a/FakeAtlas/Localization/lang.ru-RU.xaml
+++ b/FakeAtlas/Localization/lang.ru-RU.xaml
@@ -16,4 +16,16 @@
     <v:String x:Key="m_SignOut">Выйти</v:String>
     <v:String x:Key="m_Info">Информация
         о пользователе</v:String>
+    <v:String x:Key="m_City">Город</v:String>
+    <v:String x:Key="m_Name">ФИО</v:String>
+    <v:String x:Key="m_Street">Улица</v:String>
+    <v:String x:Key="m_Oblast">Область</v:String>
+    <v:String x:Key="m_BuildingNum">Дом</v:String>
+    <v:String x:Key="m_Search">Найти</v:String>
+    <v:String x:Key="m_Save">Сохранить</v:String>
+    <v:String x:Key="m_From">Откуда</v:String>
+    <v:String x:Key="m_To">Куда</v:String>
+    <v:String x:Key="m_DepartureTime">Время отправления</v:String>
+    <v:String x:Key="m_When">Когда</v:String>
+    <v:String x:Key="m_Cost">Стоимость</v:String>
 </ResourceDictionary>
