--- a/FakeAtlas/Views/InfoPage.xaml
+++ b/FakeAtlas/Views/InfoPage.xaml
@@ -8,18 +8,47 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=viewmodels:BookingUserViewModel}">
-    <Grid>
-        <DockPanel Background="AliceBlue">
-            <WrapPanel Orientation="Vertical">
-                <TextBox IsReadOnly="True" DockPanel.Dock="left" Text="Name"/>
-                <TextBox IsReadOnly="True" DockPanel.Dock="Top"  Text="LastName"/>
-                <TextBox IsReadOnly="True" DockPanel.Dock="Top"  Text="Address"/>
-                <TextBox IsReadOnly="True" DockPanel.Dock="Top"  Text="Orders"/>
-            </WrapPanel>
-            <TextBox IsReadOnly="True" DockPanel.Dock="Top" Text="Name"/>
-            <TextBox IsReadOnly="True" DockPanel.Dock="Top" Text="LastName"/>
-            <TextBox IsReadOnly="True" DockPanel.Dock="Top" Text="Address"/>
-            <ListBox ItemsSource="{Binding orders}"/>
-        </DockPanel>
-    </Grid>
+    <Border BorderBrush="#FF4F5A66" BorderThickness="1 1 0 0">
+        <Grid Margin="0 10 0 0">
+            <Grid.Background>
+                <ImageBrush ImageSource="/FakeAtlas;component/Resources/info.png" Stretch="UniformToFill" Opacity="0.03"/>
+            </Grid.Background>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="64*"/>
+                <RowDefinition Height="64*"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="10"/>
+            </Grid.ColumnDefinitions>
+            <Button Margin="0 2 0 2" Grid.Column="1" Foreground="#FF2E2D57" Opacity="0.75" Grid.Row="0" Style="{DynamicResource LiteralButton}" HorizontalAlignment="Left" Content="{DynamicResource m_Name}" Background="#FF2E2D57"/>
+            <Button Margin="0 2 0 2" Grid.Column="1" Foreground="#FF2E2D57" Opacity="0.75" Grid.Row="1" Style="{DynamicResource LiteralButton}" HorizontalAlignment="Left" Content="{DynamicResource m_City}"/>
+            <Button Margin="0 2 0 2" Grid.Column="1" Foreground="#FF2E2D57" Opacity="0.75" Grid.Row="2" Style="{DynamicResource LiteralButton}" HorizontalAlignment="Left" Content="{DynamicResource m_Oblast}"/>
+            <Button Margin="0 2 0 2" Grid.Column="1" Foreground="#FF2E2D57" Opacity="0.75" Grid.Row="3" Style="{DynamicResource LiteralButton}" HorizontalAlignment="Left" Content="{DynamicResource m_Street}"/>
+            <Button Margin="0 2 0 2" Grid.Column="1" Foreground="#FF2E2D57" Opacity="0.75" Grid.Row="4" Style="{DynamicResource LiteralButton}" HorizontalAlignment="Left" Content="{DynamicResource m_BuildingNum}" Background="#FF2A2649"/>
+            <TextBox Margin="0 2 0 2" Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="8" Grid.Column="2" Grid.Row="0" Text="{Binding SelectedUser.FullName}"/>
+            <TextBox Margin="0 2 0 2" Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="8" Grid.Column="2"  Grid.Row="1" Text="{Binding SelectedUser.IdAddressNavigation.City}"  />
+            <TextBox Margin="0 2 0 2" Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="8" Grid.Column="2"  Grid.Row="2" Text="{Binding SelectedUser.IdAddressNavigation.Oblast}"/>
+            <TextBox Margin="0 2 0 2" Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="8" Grid.Column="2" Grid.Row="3" Text="{Binding SelectedUser.IdAddressNavigation.StreetName}" />
+            <TextBox Margin="0 2 0 2" Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="8" Grid.Column="2" Grid.Row="4" Text="{Binding SelectedUser.IdAddressNavigation.BuildingNum}"/>
+            <Button  Margin="0 2 0 2" Style="{DynamicResource TiledButton}" Grid.Column="9" Grid.Row="8" Content="{DynamicResource m_Save}" FontSize="13"/>
+        </Grid>
+    </Border>
 </UserControl>
