--- a/FakeAtlas/Views/OrdersPage.xaml
+++ b/FakeAtlas/Views/OrdersPage.xaml
@@ -9,11 +9,30 @@
              d:DataContext="{d:DesignInstance Type=viewmodels:OrdersViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
-        
+        <Style TargetType="ScrollBar" BasedOn="{StaticResource CustomScroll}">
+            
+        </Style>
     </UserControl.Resources>
     <Grid>
-        <DockPanel Background="AliceBlue">
-            <TextBlock Text="Orders"/>
-        </DockPanel>
+        <ScrollViewer>
+            <ListView Background="Transparent"
+    ItemsSource="{Binding Path=Orders}">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="{DynamicResource m_DepartureTime}" 
+                  DisplayMemberBinding="{Binding ID}"  >
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Name}" 
+                  Header="{DynamicResource m_From}" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Price}" 
+                  Header="{DynamicResource m_To}" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Author}" 
+                  Header="{DynamicResource m_When}" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Catalog}" 
+                  Header="{DynamicResource m_Cost}" Width="100"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </ScrollViewer>
     </Grid>
 </UserControl>
